feat: Migrate to MERN stack and update dependencies
The application has been restructured to a full MERN (MongoDB, Express, React, Node.js) stack. This commit updates the project dependencies to include necessary server-side packages like express, mongoose, bcryptjs, jsonwebtoken, and multer.

The frontend entry point `index.tsx` has been marked as obsolete, and instructions for running the new MERN stack application are provided. Dependencies in `package.json` and `index.html` have been organized and updated to reflect the new architecture.

--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "express": "^5.1.0",
-    "dotenv": "^17.2.3",
-    "cors": "^2.8.5",
-    "path": "^0.12.7",
     "url": "^0.11.4",
     "mongoose": "^8.20.0",
     "bcryptjs": "^3.0.3",
+    "multer": "^2.0.2",
+    "fs": "^0.0.1-security",
+    "react": "^19.2.0",
     "jsonwebtoken": "^9.0.2",
     "express-async-handler": "^1.2.0",
-    "fs": "^0.0.1-security",
-    "multer": "^2.0.2",
-    "@google/genai": "^1.30.0"
+    "@google/genai": "^1.30.0",
+    "react-dom": "^19.2.0",
+    "path": "^0.12.7",
+    "dotenv": "^17.2.3",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
