--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "path": "^0.12.7",
     "dotenv": "^17.2.3",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "typescript": "~5.8.2"
   }
 }
